# graphics

./: .gitignore  CMakeLists.txt  README.md
include/graphics/: buffer_object.h  camera.h  canvas.h  drawable.h  framebuffer.h  geometry.h  graphics.h  implicit.h  light.h  material.h  material_node.h  mesh.h  node.h  object3d.h  octree.h  point_cloud.h  primitive.h  ray.h  renderer.h  scene.h  scene_node.h  scene_renderer.h  shader.h  shape.h  solid.h  sprite.h  texture.h  types.h  util.h  vbo.h  window.h
include/graphics/v1/: buffer_object.h  camera.h  canvas.h  point_cloud.h  primitive.h  scene_node.h  scene_renderer.h  shader.h  shape.h  sprite.h  texture.h
scenes/: spheres.scene
shaders/: 2d_fshader.glsl  2d_vshader.glsl  3d_fshader.glsl  3d_material_direc_fshader.glsl  3d_material_direc_vshader.glsl  3d_material_point_fshader.glsl  3d_material_point_vshader.glsl  3d_solid_point_fshader.glsl  3d_vshader.glsl  fshader.glsl  mesh_point_vshader.glsl  object3d_fshader.glsl  object3d_point_fshader.glsl  object3d_vshader.glsl  object3dtex_fshader.glsl  simple2d_fshader.glsl  simple2d_vshader_time.glsl  simple3d_fshader.glsl  solid_point_fshader.glsl  sprite_fshader.glsl  sprite_fshader_post.glsl  sprite_vshader.glsl  vshader.glsl
src/: CMakeLists.txt  camera.cpp  canvas.cpp  drawable.cpp  framebuffer.cpp  geometry.cpp  graphics.cpp  hello.cpp  implicit.cpp  light.cpp  material.cpp  material_node.cpp  mesh.cpp  node.cpp  object3d.cpp  point_cloud.cpp  primitive.cpp  ray.cpp  renderer.cpp  scene.cpp  scene_node.cpp  scene_renderer.cpp  shader.cpp  shape.cpp  solid.cpp  sprite.cpp  texture.cpp  triangle.cpp  types.cpp  window.cpp
src/apps/: CMakeLists.txt  cube.cpp  hello.cpp  material_cube.cpp  object_texture.cpp  points.cpp  post_fx.cpp  ray_scene.cpp  rendered_scene.cpp  script.cpp  shapes.cpp  shapes_scene.cpp  sprite_background.cpp  terrain.cpp  terrain_geometry.cpp  test_gl.cpp  triangle.cpp
src/apps/rubiks/: CMakeLists.txt  rubiks.cpp  rubiks.h
src/v1/: canvas.cpp  geometry.cpp  material.cpp  mesh.cpp  point_cloud.cpp  primitive.cpp  scene_node.cpp  shader.cpp  sprite.cpp
